--- a/ChunangMetaverse/threejs-learning/index.html
+++ b/ChunangMetaverse/threejs-learning/index.html
@@ -15,6 +15,6 @@
       <div class="title">Look at this beauty!</div>
       <canvas id="app"></canvas>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/basic_scene_creation/main.ts"></script>
   </body>
 </html>
