--- a/threejs/threejs-basics/index.html
+++ b/threejs/threejs-basics/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <canvas id="app"></canvas>
-    <script type="module" src="/src/geometrices/geometry.ts"></script>
+    <script type="module" src="/src/debug_ui/debug.ts"></script>
   </body>
 </html>
