updated starter code, added another starter code and shadow concept

--- a/threejs/threejs-fundamentals/index.html
+++ b/threejs/threejs-fundamentals/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <canvas id="app"></canvas>
-    <script type="module" src="/src/lights/light.ts"></script>
+    <script type="module" src="/src/shadow/shadow.ts"></script>
   </body>
 </html>
