--- a/threejs/threejs-basics/index.html
+++ b/threejs/threejs-basics/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <canvas id="app"></canvas>
-    <script type="module" src="/src/3d_text/text.ts"></script>
+    <script type="module" src="/src/shadow/shadow.ts"></script>
   </body>
 </html>
